improved menu UX, fixed jump on hover, working on animations

--- a/Menu/Menu.less
+++ b/Menu/Menu.less
@@ -21,9 +21,18 @@
 .menu ul li{
   list-style-type: none;
   font-size: 32px;
+  line-height: 46px;
   padding: 30px 0;
   text-align: center;
+  cursor: pointer;
+  &:hover {
+    color: dodgerblue;
+    background-color: white;
+    font-size: 40px;
+    border-radius: 5px;
+  }
 }
+
 
 .menu--open {
   display: block;
